--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
     environment:
       - NODE_ENV=production
       - PORT=3001
+      - FRONTEND_URL=http://43.160.253.32
     env_file:
       - .env
     volumes:
