--- a/backend/package.json
+++ b/backend/package.json
@@ -7,8 +7,7 @@
     "dev": "nodemon src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js",
-    "test": "jest",
-    "cleanup-orphaned-data": "ts-node src/scripts/cleanup-orphaned-data.ts"
+    "test": "jest"
   },
   "keywords": [
     "题库",
