🔧 修复网站图标配置和服务器部署问题
✨ 主要更新：
- 修复网站图标配置，支持多种设备和格式
- 优化Vite生产环境配置，使用绝对路径
- 完善Docker构建配置，确保图标文件正确复制
- 优化Nginx静态文件服务，提升图标加载性能
- 修复LaTeX编辑器滚动和对齐问题
- 优化相似题目检测模态框滚动体验
- 完善企业成员管理和权限系统
- 优化UI组件和页面性能

🚀 部署优化：
- 图标路径从相对路径改为绝对路径
- 添加静态文件缓存策略
- 确保Docker容器包含所有必要文件

--- a/nginx.conf
+++ b/nginx.conf
@@ -93,7 +93,18 @@ http {
             access_log off;
         }
 
-        # 静态文件服务 - 从后端容器获取
+        # 静态文件服务 - 优先处理图标等静态资源
+        location ~* \.(ico|png|jpg|jpeg|gif|svg|css|js|woff|woff2|ttf|eot)$ {
+            proxy_pass http://backend;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            expires 1y;
+            add_header Cache-Control "public, immutable";
+        }
+
+        # 其他请求代理到后端
         location / {
             proxy_pass http://backend/;
             proxy_set_header Host $host;
