--- a/nginx.conf
+++ b/nginx.conf
@@ -93,15 +93,21 @@ http {
             access_log off;
         }
 
-        # 静态文件服务 - 优先处理图标等静态资源
+        # 静态文件服务 - 直接提供，不通过代理
         location ~* \.(ico|png|jpg|jpeg|gif|svg|css|js|woff|woff2|ttf|eot)$ {
+            root /usr/share/nginx/html;
+            try_files $uri $uri/ @backend;
+            expires 1y;
+            add_header Cache-Control "public, immutable";
+        }
+
+        # 后端代理fallback
+        location @backend {
             proxy_pass http://backend;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
-            expires 1y;
-            add_header Cache-Control "public, immutable";
         }
 
         # 其他请求代理到后端
