🔧 进一步优化图标文件处理
🐛 问题分析：
- 图标文件仍然返回HTML内容
- 需要为图标文件添加特殊处理规则
- 确保图标文件不被后端代理拦截

✅ 修复方案：
- 为/avatar/路径添加专门的location规则
- 使用try_files  =404确保文件不存在时返回404而不是fallback
- 强制设置Content-Type为image/png

🚀 现在图标应该能正确显示了

--- a/nginx.conf
+++ b/nginx.conf
@@ -101,6 +101,15 @@ http {
             add_header Cache-Control "public, immutable";
         }
 
+        # 图标文件特殊处理 - 最高优先级
+        location ~* ^/avatar/.*\.(png|jpg|jpeg|gif|ico)$ {
+            root /usr/share/nginx/html;
+            try_files $uri =404;
+            expires 1y;
+            add_header Cache-Control "public, immutable";
+            add_header Content-Type "image/png";
+        }
+
         # 后端代理fallback
         location @backend {
             proxy_pass http://backend;
