--- a/nginx.conf
+++ b/nginx.conf
@@ -93,15 +93,7 @@ http {
             access_log off;
         }
 
-        # 静态文件服务 - 直接提供，不通过代理
-        location ~* \.(ico|png|jpg|jpeg|gif|svg|css|js|woff|woff2|ttf|eot)$ {
-            root /usr/share/nginx/html;
-            try_files $uri $uri/ @backend;
-            expires 1y;
-            add_header Cache-Control "public, immutable";
-        }
-
-        # 图标文件特殊处理 - 最高优先级
+        # 图标文件特殊处理 - 只针对图标，不影响字体
         location ~* ^/avatar/.*\.(png|jpg|jpeg|gif|ico)$ {
             root /usr/share/nginx/html;
             try_files $uri =404;
