🔧 修复图标文件缺失问题
🐛 问题根源：
- .gitignore规则过于严格，导致avatar.png被忽略
- Gitee上没有avatar.png文件，所以图标无法显示

✅ 修复方案：
- 修复.gitignore规则，保留必要的静态资源
- 强制添加avatar.png到git仓库
- 确保前端和后端的必要图片文件不被忽略

🚀 现在avatar.png应该能正确上传到Gitee了

--- a/.gitignore
+++ b/.gitignore
@@ -129,11 +129,22 @@ backend/logs/
 *.xls
 *.xlsx
 
-# Image files (if they're large)
+# Image files (if they're large) - 但保留必要的静态资源
 *.jpg
 *.jpeg
 *.png
 *.gif
 *.bmp
 *.tiff
-*.svg 
+*.svg
+# 例外：保留前端和后端的必要图片文件
+!frontend/public/avatar/*.png
+!frontend/public/avatar/*.jpg
+!frontend/public/avatar/*.jpeg
+!frontend/public/avatar/*.gif
+!frontend/public/avatar/*.ico
+!backend/public/avatars/*.png
+!backend/public/avatars/*.jpg
+!backend/public/avatars/*.jpeg
+!backend/public/avatars/*.gif
+!backend/public/avatars/*.ico 
