🔧 修复Vite构建后图标路径问题
🐛 问题分析：
- 源代码中图标路径是 /avatar/avatar.png
- Vite构建后路径变为 /assets/avatar-BAhxljkW.png
- 当前nginx只处理/avatar/路径，没有处理/assets/路径

✅ 修复方案：
- 添加对/assets/路径的支持
- 挂载frontend/dist目录到nginx容器
- 确保构建后的静态文件能被nginx正确访问

🚀 现在图标应该能正常显示了

--- a/nginx.conf
+++ b/nginx.conf
@@ -102,6 +102,14 @@ http {
             add_header Content-Type "image/png";
         }
 
+        # Vite构建后的assets文件处理
+        location ~* ^/assets/.*\.(png|jpg|jpeg|gif|ico|css|js|woff|woff2|ttf|eot)$ {
+            root /usr/share/nginx/html;
+            try_files $uri =404;
+            expires 1y;
+            add_header Cache-Control "public, immutable";
+        }
+
         # 后端代理fallback
         location @backend {
             proxy_pass http://backend;
