--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ services:
       - "443:443"
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf
-      - ./ssl:/etc/nginx/ssl
+      - /root/ssl:/etc/nginx/ssl
       - ./frontend/dist:/usr/share/nginx/html
     depends_on:
       - mareate-app
