🔧 修复端口冲突问题
🐛 问题根源：
- mareate-app 映射了 80:3001 端口
- nginx 也映射了 80:80 端口
- 两个服务竞争宿主机80端口，导致冲突

✅ 修复方案：
- 移除 mareate-app 的端口映射
- 后端应用只通过 nginx 代理访问
- 避免端口冲突，确保服务正常启动

🚀 现在应该可以正常启动服务了

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,9 @@ services:
   mareate-app:
     build: .
     container_name: mareate-app
-    ports:
-      - "80:3001"
+    # 移除端口映射，只通过nginx访问
+    # ports:
+    #   - "80:3001"
     environment:
       - NODE_ENV=production
       - PORT=3001
