--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,9 +2,8 @@ services:
   mareate-app:
     build: .
     container_name: mareate-app
-    # 移除端口映射，只通过nginx访问
-    # ports:
-    #   - "80:3001"
+    ports:
+      - "80:3001"
     environment:
       - NODE_ENV=production
       - PORT=3001
@@ -22,11 +21,10 @@ services:
     image: nginx:alpine
     container_name: mareate-nginx
     ports:
-      - "80:80"
       - "443:443"
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf
-      - /root/ssl:/etc/nginx/ssl
+      - ./ssl:/etc/nginx/ssl
       - ./frontend/dist:/usr/share/nginx/html
     depends_on:
       - mareate-app
