--- a/nginx.conf
+++ b/nginx.conf
@@ -43,17 +43,38 @@ http {
         server mareate-app:3001;
     }
 
-    # HTTP服务器
+    # HTTP服务器 - 重定向到HTTPS
     server {
         listen 80;
-        server_name 43.160.253.32;
+        server_name www.mareate.com mareate.com 43.160.253.32;
+        
+        # 重定向所有HTTP请求到HTTPS
+        return 301 https://www.mareate.com$request_uri;
+    }
+    
+    # HTTPS服务器 - 启用SSL
+    server {
+        listen 443 ssl http2;
+        server_name www.mareate.com mareate.com;
+        
+        # SSL证书配置
+        ssl_certificate /etc/nginx/ssl/cert.pem;
+        ssl_certificate_key /etc/nginx/ssl/key.pem;
+        
+        # SSL安全配置
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_ciphers ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-SHA384:ECDHE-RSA-AES128-SHA256;
+        ssl_prefer_server_ciphers off;
+        ssl_session_cache shared:SSL:10m;
+        ssl_session_timeout 10m;
         
         # 安全头
         add_header X-Frame-Options "SAMEORIGIN" always;
         add_header X-XSS-Protection "1; mode=block" always;
         add_header X-Content-Type-Options "nosniff" always;
         add_header Referrer-Policy "no-referrer-when-downgrade" always;
-
+        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+        
         # API代理 - 优先处理
         location /api/ {
             proxy_pass http://backend/api/;
@@ -68,7 +89,7 @@ http {
             proxy_read_timeout 300s;
             proxy_connect_timeout 75s;
         }
-
+        
         # 文件上传代理
         location /uploads/ {
             proxy_pass http://backend/uploads/;
@@ -77,7 +98,7 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
         }
-
+        
         # 临时文件代理
         location /temp/ {
             proxy_pass http://backend/temp/;
@@ -86,14 +107,14 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
         }
-
+        
         # 健康检查
         location /health {
             proxy_pass http://backend/health;
             access_log off;
         }
-
-        # 图标文件特殊处理 - 只针对图标，不影响字体
+        
+        # 图标文件特殊处理
         location ~* ^/avatar/.*\.(png|jpg|jpeg|gif|ico)$ {
             root /usr/share/nginx/html;
             try_files $uri =404;
@@ -101,7 +122,7 @@ http {
             add_header Cache-Control "public, immutable";
             add_header Content-Type "image/png";
         }
-
+        
         # Vite构建后的assets文件处理
         location ~* ^/assets/.*\.(png|jpg|jpeg|gif|ico|css|js|woff|woff2|ttf|eot)$ {
             root /usr/share/nginx/html;
@@ -109,16 +130,7 @@ http {
             expires 1y;
             add_header Cache-Control "public, immutable";
         }
-
-        # 后端代理fallback
-        location @backend {
-            proxy_pass http://backend;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-        }
-
+        
         # 其他请求代理到后端
         location / {
             proxy_pass http://backend/;
@@ -128,21 +140,4 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
     }
-
-    # HTTPS服务器（可选，需要SSL证书）
-    # server {
-    #     listen 443 ssl http2;
-    #     server_name 43.160.253.32;
-    #     
-    #     ssl_certificate /etc/nginx/ssl/cert.pem;
-    #     ssl_certificate_key /etc/nginx/ssl/key.pem;
-    #     
-    #     # SSL配置
-    #     ssl_protocols TLSv1.2 TLSv1.3;
-    #     ssl_ciphers ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384;
-    #     ssl_prefer_server_ciphers off;
-    #     
-    #     # 其他配置与HTTP相同
-    #     # ...
-    # }
 } 
