🔧 最终修复HTTPS混合内容问题
✅ 修复完成：
- 所有前端API调用已更新为使用环境变量或HTTPS fallback
- BatchUploadPage.tsx中的4个fetch调用已修复
- docker-compose.yml中的FRONTEND_URL已更新为HTTPS
- 删除了包含敏感信息的fix-mixed-content.sh脚本

🚀 现在所有配置都正确设置为HTTPS：
- VITE_API_URL=https://www.mareate.com/api
- FRONTEND_URL=https://www.mareate.com
- 前端构建时环境变量正确注入
- 后端CORS配置支持HTTPS

🎯 混合内容错误应该完全解决！

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     environment:
       - NODE_ENV=production
       - PORT=3001
-      - FRONTEND_URL=http://www.mareate.com
+      - FRONTEND_URL=https://www.mareate.com
     env_file:
       - .env
     volumes:
