--- a/nginx.conf
+++ b/nginx.conf
@@ -52,6 +52,17 @@ http {
         return 301 https://www.mareate.com$request_uri;
     }
     
+    # 特殊处理api主机名 - 修复混合内容错误
+    server {
+        listen 80;
+        server_name api;
+        
+        # 重定向所有api请求到正确的HTTPS地址
+        location / {
+            return 301 https://www.mareate.com/api$request_uri;
+        }
+    }
+    
     # HTTPS服务器 - 启用SSL
     server {
         listen 443 ssl http2;
