🔧 修复混合内容错误
1. 修改BatchUploadPage.tsx中的API调用，确保使用HTTPS
2. 修改nginx.conf添加更强大的api主机名处理规则
3. 创建修复混合内容的综合脚本

这些修改可以解决浏览器中的混合内容错误，确保所有API请求都使用HTTPS

--- a/nginx.conf
+++ b/nginx.conf
@@ -54,12 +54,21 @@ http {
     
     # 特殊处理api主机名 - 修复混合内容错误
     server {
-        listen 80;
-        server_name api;
+        listen 80 default_server;
         
-        # 重定向所有api请求到正确的HTTPS地址
+        # 处理api主机名的请求
         location / {
-            return 301 https://www.mareate.com/api$request_uri;
+            if ($http_host = "api") {
+                return 301 https://www.mareate.com/api$request_uri;
+            }
+            
+            # 处理直接访问api路径的请求
+            if ($request_uri ~ "^/api/(.*)") {
+                return 301 https://www.mareate.com/api/$1;
+            }
+            
+            # 默认情况下不做处理，让后面的server块处理
+            try_files $uri $uri/ =404;
         }
     }
     
