--- a/nginx.conf
+++ b/nginx.conf
@@ -67,6 +67,11 @@ http {
                 return 301 https://www.mareate.com/api/$1;
             }
             
+            # 处理任何可能的HTTP API请求
+            if ($scheme = "http" && $request_uri ~ "^/api/") {
+                return 301 https://www.mareate.com$request_uri;
+            }
+            
             # 默认情况下不做处理，让后面的server块处理
             try_files $uri $uri/ =404;
         }
