🔧 修复混合内容错误的根本原因
1. 修复questionAnalysisAPI.ts中的硬编码API路径
2. 增强nginx配置，处理所有可能的API请求模式
3. 确保所有API调用都使用正确的baseURL配置

--- a/nginx.conf
+++ b/nginx.conf
@@ -72,6 +72,11 @@ http {
                 return 301 https://www.mareate.com$request_uri;
             }
             
+            # 处理任何以api开头的请求
+            if ($request_uri ~ "^api/(.*)") {
+                return 301 https://www.mareate.com/api/$1;
+            }
+            
             # 默认情况下不做处理，让后面的server块处理
             try_files $uri $uri/ =404;
         }
