--- a/nginx.conf
+++ b/nginx.conf
@@ -84,26 +84,47 @@ http {
     
     # HTTPS服务器 - 启用SSL
     server {
-        listen 443 ssl http2;
+        listen 443 ssl;
+        http2 on;
         server_name www.mareate.com mareate.com;
         
         # SSL证书配置
         ssl_certificate /etc/nginx/ssl/cert.pem;
         ssl_certificate_key /etc/nginx/ssl/key.pem;
+        # 如果有证书链文件，取消注释下面这行
+        # ssl_certificate_chain /etc/nginx/ssl/chain.pem;
         
-        # SSL安全配置
+        # SSL安全配置 - 优化版本
         ssl_protocols TLSv1.2 TLSv1.3;
-        ssl_ciphers ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-SHA384:ECDHE-RSA-AES128-SHA256;
+        
+        # 优化的加密套件 - 优先选择前向保密性强的套件
+        ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384;
+        
         ssl_prefer_server_ciphers off;
+        
+        # SSL会话配置
         ssl_session_cache shared:SSL:10m;
         ssl_session_timeout 10m;
+        ssl_session_tickets off;
+        
+        # 前向保密性配置
+        ssl_dhparam /etc/nginx/ssl/dhparam.pem;
+        
+        # OCSP Stapling - 提升SSL握手性能
+        ssl_stapling on;
+        ssl_stapling_verify on;
+        resolver 8.8.8.8 8.8.4.4 valid=300s;
+        resolver_timeout 5s;
+        
+        # SSL缓冲区配置
+        ssl_buffer_size 4k;
         
         # 安全头
         add_header X-Frame-Options "SAMEORIGIN" always;
         add_header X-XSS-Protection "1; mode=block" always;
         add_header X-Content-Type-Options "nosniff" always;
         add_header Referrer-Policy "no-referrer-when-downgrade" always;
-        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
         
         # API代理 - 优先处理
         location /api/ {
