--- a/nginx.conf
+++ b/nginx.conf
@@ -52,36 +52,6 @@ http {
         return 301 https://www.mareate.com$request_uri;
     }
     
-    # 特殊处理api主机名 - 修复混合内容错误
-    server {
-        listen 80 default_server;
-        
-        # 处理api主机名的请求
-        location / {
-            if ($http_host = "api") {
-                return 301 https://www.mareate.com/api$request_uri;
-            }
-            
-            # 处理直接访问api路径的请求
-            if ($request_uri ~ "^/api/(.*)") {
-                return 301 https://www.mareate.com/api/$1;
-            }
-            
-            # 处理任何可能的HTTP API请求
-            if ($scheme = "http" && $request_uri ~ "^/api/") {
-                return 301 https://www.mareate.com$request_uri;
-            }
-            
-            # 处理任何以api开头的请求
-            if ($request_uri ~ "^api/(.*)") {
-                return 301 https://www.mareate.com/api/$1;
-            }
-            
-            # 默认情况下不做处理，让后面的server块处理
-            try_files $uri $uri/ =404;
-        }
-    }
-    
     # HTTPS服务器 - 启用SSL
     server {
         listen 443 ssl;
@@ -91,40 +61,20 @@ http {
         # SSL证书配置
         ssl_certificate /etc/nginx/ssl/cert.pem;
         ssl_certificate_key /etc/nginx/ssl/key.pem;
-        # 如果有证书链文件，取消注释下面这行
-        # ssl_certificate_chain /etc/nginx/ssl/chain.pem;
         
-        # SSL安全配置 - 优化版本
+        # SSL安全配置
         ssl_protocols TLSv1.2 TLSv1.3;
-        
-        # 优化的加密套件 - 优先选择前向保密性强的套件
-        ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384;
-        
+        ssl_ciphers ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-SHA384:ECDHE-RSA-AES128-SHA256;
         ssl_prefer_server_ciphers off;
-        
-        # SSL会话配置
         ssl_session_cache shared:SSL:10m;
         ssl_session_timeout 10m;
-        ssl_session_tickets off;
-        
-        # 前向保密性配置
-        ssl_dhparam /etc/nginx/ssl/dhparam.pem;
-        
-        # OCSP Stapling - 提升SSL握手性能
-        ssl_stapling on;
-        ssl_stapling_verify on;
-        resolver 8.8.8.8 8.8.4.4 valid=300s;
-        resolver_timeout 5s;
-        
-        # SSL缓冲区配置
-        ssl_buffer_size 4k;
         
         # 安全头
         add_header X-Frame-Options "SAMEORIGIN" always;
         add_header X-XSS-Protection "1; mode=block" always;
         add_header X-Content-Type-Options "nosniff" always;
         add_header Referrer-Policy "no-referrer-when-downgrade" always;
-        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
+        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
         
         # API代理 - 优先处理
         location /api/ {
