--- a/backend/package.json
+++ b/backend/package.json
@@ -17,9 +17,12 @@
   "author": "Viquard Team",
   "license": "ISC",
   "dependencies": {
+    "@types/adm-zip": "^0.5.7",
+    "adm-zip": "^0.5.16",
     "axios": "^1.11.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
@@ -28,7 +31,8 @@
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "latex-parser": "^0.6.2",
-    "mammoth": "^1.9.1",
+
+    "mammoth": "^1.10.0",
     "mongoose": "^8.0.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
