fix: 修复静态资源404错误
- 修复Dockerfile中的静态文件路径配置
- 添加nginx-static路径的静态文件服务
- 修改nginx配置，通过后端代理提供静态资源
- 确保Vite构建的assets文件能正确访问

--- a/nginx.conf
+++ b/nginx.conf
@@ -126,8 +126,7 @@ http {
         
         # Vite构建后的assets文件处理
         location ~* ^/assets/.*\.(png|jpg|jpeg|gif|ico|css|js|woff|woff2|ttf|eot)$ {
-            root /usr/share/nginx/html;
-            try_files $uri =404;
+            proxy_pass http://backend/nginx-static$uri;
             expires 1y;
             add_header Cache-Control "public, immutable";
         }
