feat: 添加游戏时间惩罚机制
- 数学计算游戏：答错题目时间减少1.5秒
- 数字拼图游戏：每走一步时间减少0.15秒
- 优化时间显示逻辑，支持小数时间显示
- 确保时间不会减少到负数

--- a/package.json
+++ b/package.json
@@ -22,5 +22,9 @@
     "Node.js"
   ],
   "author": "Viquard Team",
-  "license": "ISC"
-} 
+  "license": "ISC",
+  "dependencies": {
+    "clsx": "^2.1.1",
+    "tailwind-merge": "^3.3.1"
+  }
+}
