--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@types/node": "^24.1.0",
     "@types/prismjs": "^1.26.5",
     "axios": "^1.11.0",
+    "clsx": "^2.1.1",
     "framer-motion": "^12.23.11",
     "katex": "^0.16.22",
     "lucide-react": "^0.528.0",
@@ -26,8 +27,10 @@
     "prismjs": "^1.30.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-dropzone": "^14.3.8",
     "react-katex": "^3.1.0",
     "react-router-dom": "^7.7.1",
+    "tailwind-merge": "^3.3.1",
     "zustand": "^5.0.6"
   },
   "devDependencies": {
