--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@types/node": "^24.1.0",
     "@types/prismjs": "^1.26.5",
     "axios": "^1.11.0",
+    "chart.js": "^4.5.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.18.2",
     "katex": "^0.16.22",
@@ -26,6 +27,7 @@
     "pdfjs-dist": "^5.4.54",
     "prismjs": "^1.30.0",
     "react": "^19.1.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
     "react-dropzone": "^14.3.8",
     "react-katex": "^3.1.0",
