--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.11.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "cos-nodejs-sdk-v5": "^2.15.4",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
