🔧 添加调试工具和Docker日志配置
📋 新增调试工具：

1. 🔍 debug-auth.js - 认证流程调试脚本
   - 检查环境变量配置
   - 测试数据库连接
   - 验证用户和草稿数据
   - 测试JWT token生成和验证

2. 🧪 test-auth-with-token.js - 带认证的API测试脚本
   - 生成有效的JWT token
   - 测试草稿API认证流程
   - 验证响应数据结构

3. 🐳 Docker日志配置优化
   - 添加json-file日志驱动
   - 配置日志文件大小和数量限制
   - 确保容器日志能正确输出到主机

✅ 调试结果：
- 后端API完全正常
- 认证中间件工作正常
- 数据库连接和查询正常
- 响应数据结构正确

🎯 下一步：
- 重点检查前端认证token存储和发送
- 验证前端环境变量配置
- 排查前端认证头设置问题

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,12 @@ services:
     restart: unless-stopped
     networks:
       - mareate-network
+    # 确保日志输出到主机
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
 
   nginx:
     image: nginx:alpine
