--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.11.0",
     "chart.js": "^4.5.0",
     "clsx": "^2.1.1",
+    "emoji-picker-react": "^4.13.2",
     "framer-motion": "^11.18.2",
     "katex": "^0.16.22",
     "lucide-react": "^0.528.0",
