--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,18 +14,24 @@
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
     "@tanstack/react-query": "^5.83.0",
+    "@types/highlight.js": "^9.12.4",
     "@types/node": "^24.1.0",
     "@types/prismjs": "^1.26.5",
     "axios": "^1.11.0",
     "chart.js": "^4.5.0",
     "clsx": "^2.1.1",
+    "diff-match-patch": "^1.0.5",
     "emoji-picker-react": "^4.13.2",
     "framer-motion": "^11.18.2",
+    "graphviz-react": "^1.2.5",
+    "highlight.js": "^11.11.1",
     "katex": "^0.16.22",
     "lucide-react": "^0.528.0",
     "mammoth": "^1.9.1",
+    "mermaid": "^11.10.1",
     "outline": "^0.1.1",
     "pdfjs-dist": "^5.4.54",
+    "plantuml-encoder": "^1.4.0",
     "prismjs": "^1.30.0",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
@@ -33,11 +39,13 @@
     "react-dropzone": "^14.3.8",
     "react-katex": "^3.1.0",
     "react-router-dom": "^7.7.1",
+    "recharts": "^3.1.2",
     "tailwind-merge": "^3.3.1",
     "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
+    "@types/diff-match-patch": "^1.0.36",
     "@types/katex": "^0.16.7",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
