fix: 修复网站图标和favicon显示问题
- 修复nginx配置中头像文件路径映射问题
- 添加favicon.ico文件支持
- 更新docker-compose.yml正确挂载静态文件
- 修复HTML中favicon引用配置
- 解决网站标签栏图标404错误问题

--- a/nginx.conf
+++ b/nginx.conf
@@ -115,6 +115,15 @@ http {
             access_log off;
         }
         
+        # favicon.ico处理
+        location = /favicon.ico {
+            root /usr/share/nginx/html;
+            try_files $uri =404;
+            expires 1y;
+            add_header Cache-Control "public, immutable";
+            add_header Content-Type "image/x-icon";
+        }
+        
         # 图标文件特殊处理
         location ~* ^/avatar/.*\.(png|jpg|jpeg|gif|ico)$ {
             root /usr/share/nginx/html;
