fix: 修复favicon.ico显示问题
- 重新生成合适大小的favicon.ico文件（32x32像素）
- 修复nginx配置中ico文件路径冲突问题
- 添加shortcut icon引用确保浏览器兼容性
- 移除assets路径中的ico匹配避免拦截favicon请求
- 添加CORS头确保favicon正常加载

--- a/nginx.conf
+++ b/nginx.conf
@@ -122,6 +122,7 @@ http {
             expires 1y;
             add_header Cache-Control "public, immutable";
             add_header Content-Type "image/x-icon";
+            add_header Access-Control-Allow-Origin "*";
         }
         
         # 图标文件特殊处理
@@ -134,7 +135,7 @@ http {
         }
         
         # Vite构建后的assets文件处理
-        location ~* ^/assets/.*\.(png|jpg|jpeg|gif|ico|css|js|woff|woff2|ttf|eot)$ {
+        location ~* ^/assets/.*\.(png|jpg|jpeg|gif|css|js|woff|woff2|ttf|eot)$ {
             proxy_pass http://backend/nginx-static$uri;
             expires 1y;
             add_header Cache-Control "public, immutable";
