fix: 修复Chrome浏览器favicon显示问题
- 重新生成多尺寸favicon.ico文件（16x16和32x32）
- 添加favicon.png文件作为Chrome的备选方案
- 优化HTML中favicon引用顺序和格式
- 增强nginx配置支持多种favicon格式
- 添加Chrome特定的HTTP头确保兼容性
- 解决Safari显示但Chrome不显示的问题

--- a/nginx.conf
+++ b/nginx.conf
@@ -115,8 +115,21 @@ http {
             access_log off;
         }
         
-        # favicon.ico处理
+        # favicon.ico处理 - 优先处理
         location = /favicon.ico {
+            root /usr/share/nginx/html;
+            try_files $uri =404;
+            expires 1y;
+            add_header Cache-Control "public, immutable";
+            add_header Content-Type "image/x-icon";
+            add_header Access-Control-Allow-Origin "*";
+            add_header Vary "Accept-Encoding";
+            # 确保Chrome能正确识别
+            add_header X-Content-Type-Options "nosniff";
+        }
+        
+        # 通用favicon处理 - 兼容Chrome
+        location ~* ^/favicon\.(ico|png|gif|jpg|jpeg)$ {
             root /usr/share/nginx/html;
             try_files $uri =404;
             expires 1y;
