fix: 修复favicon显示问题 - 文件大小和nginx配置
- 优化favicon.png文件大小从140K减少到1.1K
- 修复nginx配置中favicon.png的Content-Type设置
- 分离favicon.ico和favicon.png的处理规则
- 确保Chrome浏览器能正确识别和显示favicon
- 解决服务器上favicon文件路径和类型问题

--- a/nginx.conf
+++ b/nginx.conf
@@ -128,13 +128,23 @@ http {
             add_header X-Content-Type-Options "nosniff";
         }
         
-        # 通用favicon处理 - 兼容Chrome
-        location ~* ^/favicon\.(ico|png|gif|jpg|jpeg)$ {
+        # favicon.png处理
+        location = /favicon.png {
             root /usr/share/nginx/html;
             try_files $uri =404;
             expires 1y;
             add_header Cache-Control "public, immutable";
-            add_header Content-Type "image/x-icon";
+            add_header Content-Type "image/png";
+            add_header Access-Control-Allow-Origin "*";
+        }
+        
+        # 其他favicon格式处理
+        location ~* ^/favicon\.(gif|jpg|jpeg)$ {
+            root /usr/share/nginx/html;
+            try_files $uri =404;
+            expires 1y;
+            add_header Cache-Control "public, immutable";
+            add_header Content-Type "image/png";
             add_header Access-Control-Allow-Origin "*";
         }
         
